Fix downshifting venue listing divs; tweak responsive styling.

--- a/app/assets/stylesheets/bitters/_variables.scss
+++ b/app/assets/stylesheets/bitters/_variables.scss
@@ -72,6 +72,7 @@ $sort-button-selected-text-color: #000;
 // Gig Listing
 
 $gig-listing-font-size: $base-font-size * 0.8;
+$venue-listing-font-size-mobile: $gig-listing-font-size;
 $gig-listing-inactive-url-font-size: $base-font-size * 1.5;
 $month-font-size: $base-font-size * 3;
 $month-font-size-mobile: $base-font-size * 2;
