--- a/app/assets/stylesheets/venues.css.scss
+++ b/app/assets/stylesheets/venues.css.scss
@@ -32,15 +32,17 @@
   }
   .venue-listing {
     display: inline-block;
-    min-width: 30%;
-    @include media($mobile) {
-      width: 45%;
-      vertical-align: top;
-    }
+    width: 30%;
+    vertical-align: top;
     height: 130px;
     margin-bottom: 5px;
     padding-left: 10px;
     padding-top: 10px;
+    @include media($mobile) {
+      width: 45%;
+      margin-bottom: 20px;
+      font-size: $venue-listing-font-size-mobile;
+    }
     .bip-cancel-btn {
       margin-bottom: 10px;
       color: rgba(0,0,0,1);
